@@ -1,3 +1,8 @@
+2011-11-22  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/nad_init.c, src/pj_gridinfo.c, src/nad2bin.c: Implement
+	support for "ctable2" format grid shift files.
+
 2011-11-18  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/pj_mutex.c, src/pj_apply_vgridshift.c: avoid unused warnings.
